--- a/src/app/pages/game/game.component.scss
+++ b/src/app/pages/game/game.component.scss
@@ -28,6 +28,10 @@ $unit: 3.5vh;
   background-color: #999;
 }
 
+.sunk {
+  background-color: #99000088;
+}
+
 .noselect {
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
