--- a/src/app/pages/game/game.component.html
+++ b/src/app/pages/game/game.component.html
@@ -1,5 +1,7 @@
 <div class="container d-flex flex-column align-items-center">
-  <div class="d-flex flex-column grid m-3">
+  <h2 class="title">Battleships: Space!</h2>
+  <h3 class="title">Enemy battlefield</h3>
+  <div class="d-flex flex-column grid mb-3">
     <div class="d-flex flex-row grid__row" *ngFor="let row of enemyGrid">
       <div
         class="grid__row__cell noselect"
@@ -12,6 +14,7 @@
     </div>
   </div>
 
+  <h3 class="title">your battlefield</h3>
   <div class="d-flex flex-column grid">
     <div class="d-flex flex-row grid__row" *ngFor="let row of playerGrid">
       <div
@@ -38,7 +41,7 @@
     </div>
   </div>
 
-  <div class="d-flex flex-column probability grid">
+  <!-- <div class="d-flex flex-column probability grid">
     <div class="d-flex flex-row" *ngFor="let row of probGrid">
       <div
         class="grid__row__cell--small noselect"
@@ -46,5 +49,5 @@
         [style.background-color]="'rgba(1,1,1,' + cell.prob + ')'"
       ></div>
     </div>
-  </div>
+  </div> -->
 </div>
