--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+html,
+body {
+  width: 100%;
+  height: 100%;
+  font-family: 'Space Mono', monospace;
+}
+
+body {
+  background: url(/assets/galaxy.jpg) no-repeat no-repeat;
+  background-size: cover;
+  background-position: center;
+}
